--- a/client/src/components/Form.scss
+++ b/client/src/components/Form.scss
@@ -4,7 +4,13 @@
   justify-content: center;
   flex-direction: row;
   .form_input {
-    width: 300px;
+    width: 400px;
     height: 60px;
+  }
+  .short_url_container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
   }
 }
