--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -1,11 +1,23 @@
+@import url("https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500&display=swap");
+
 body {
-  background-image: url("https://images.unsplash.com/photo-1607893240314-91143f82a0ce?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1500&q=80");
   background-size: cover;
   background-repeat: no-repeat;
   width: 100%;
 }
 
 .app {
+  font-family: "Rubik", sans-serif;
+  img {
+    height: 100%;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    position: absolute;
+    width: 100%;
+    z-index: 1;
+    opacity: 0.8;
+  }
   display: flex;
   align-items: center;
   justify-content: center;
