--- a/client/src/components/Form/Form.scss
+++ b/client/src/components/Form/Form.scss
@@ -1,8 +1,22 @@
+@import url("https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500&display=swap");
+
 .form_container {
   display: flex;
   align-items: center;
-  justify-content: center;
+  font-family: "Rubik", sans-serif;
+  justify-content: space-between;
+  height: 600px;
+  padding: 7rem 4rem;
+  background-color: rgb(255, 255, 255);
+  box-shadow: 0 25px 60px rgba(0, 0, 0, 0.8);
+  z-index: 2;
   flex-direction: column;
+  label {
+    z-index: 2;
+    font-size: 20px;
+    font-style: italic;
+    color: #333333;
+  }
   .form_input {
     width: 600px;
     height: 80px;
@@ -10,12 +24,15 @@
     margin: 10px;
     border-radius: 25px;
     opacity: 0.5;
+    z-index: 2;
+    font-size: 20px;
   }
   .short_url_container {
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    z-index: 2;
   }
 }
 
@@ -24,6 +41,7 @@
   height: 80px;
   padding: 5px;
   margin: 5px;
+  z-index: 2;
   border-radius: 25px;
   font-size: 30px;
   opacity: 0.8;
@@ -32,9 +50,8 @@
   display: inline-block;
   cursor: pointer;
   color: #333333;
-  font-family: Arial;
-  font-size: 15px;
-  font-weight: bold;
+  font-family: "Rubik", sans-serif;
+  font-size: 20px;
   padding: 6px 24px;
   text-decoration: none;
   text-shadow: 0px 1px 0px #ffee66;
@@ -53,6 +70,7 @@
   justify-content: center;
   display: flex;
   flex-direction: column;
+  z-index: 2;
 
   .short_url {
     padding: 40px;
@@ -64,6 +82,7 @@
     opacity: 0.5;
     border-radius: 25px;
     font-size: 20px;
+    z-index: 2;
   }
 }
 
