--- a/client/src/components/Stats/Stats.scss
+++ b/client/src/components/Stats/Stats.scss
@@ -1,3 +1,12 @@
 .stats_container {
   text-align: center;
+  z-index: 2;
+  padding: 4rem;
+  background-color: white;
+  opacity: 0.4;
+  box-shadow: 0 25px 60px rgba(0, 0, 0, 0.8);
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  height: 300px;
 }
